--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -3,6 +3,7 @@
     "com.meta.xr.sdk.all": "68.0.2",
     "com.unity.collab-proxy": "2.5.2",
     "com.unity.feature.development": "1.0.1",
+    "com.unity.multiplayer.tools": "1.1.1",
     "com.unity.netcode.gameobjects": "1.11.0",
     "com.unity.nuget.mono-cecil": "1.10.2",
     "com.unity.services.lobby": "1.2.2",
@@ -13,6 +14,7 @@
     "com.unity.visualscripting": "1.9.4",
     "com.unity.xr.management": "4.5.0",
     "com.unity.xr.oculus": "4.2.0",
+    "com.unity.xr.openxr": "1.12.1",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
